// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render correctly 1`] = `
<Modal__ModalToggle
  show={true}
>
  <Keydown
    handleKeydown={[Function]}
    keyCode={27}
  />
  <Modal__ModalOverlay
    onClick={[Function]}
  />
  <Modal__ModalContent
    border="default"
    borderColor="border"
    borderRadius={2}
    p={7}
  />
</Modal__ModalToggle>
`;

exports[`Modal should render with props closeButton 1`] = `
<Modal__ModalToggle
  show={true}
>
  <Keydown
    handleKeydown={[Function]}
    keyCode={27}
  />
  <Modal__ModalOverlay
    onClick={[Function]}
  />
  <Modal__ModalContent
    border="default"
    borderColor="border"
    borderRadius={2}
    p={7}
  >
    <CloseButton
      handleClose={[Function]}
    />
  </Modal__ModalContent>
</Modal__ModalToggle>
`;
